[gd_scene load_steps=4 format=3 uid="uid://pu46mkcjdswb"]

[ext_resource type="Script" uid="uid://cflycxslc3d7k" path="res://scenes/escape_menu/escape_menu.gd" id="1_m4juf"]
[ext_resource type="Theme" uid="uid://dx2jrpheeri2w" path="res://assets/theme.tres" id="2_pn4ld"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1v067"]
bg_color = Color(0, 0, 0, 0.752941)

[node name="EscMenu" type="CanvasLayer"]
process_mode = 3
layer = 99
script = ExtResource("1_m4juf")

[node name="EscButton" type="Button" parent="."]
visible = false
offset_left = 5.0
offset_top = 5.0
offset_right = 35.0
offset_bottom = 27.0
theme = ExtResource("2_pn4ld")
icon_alignment = 1

[node name="EscPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
z_index = 998
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_pn4ld")
theme_override_styles/panel = SubResource("StyleBoxFlat_1v067")

[node name="CenterContainer" type="CenterContainer" parent="EscPanel"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="EscPanel/CenterContainer"]
layout_mode = 2

[node name="EscMenu" type="VBoxContainer" parent="EscPanel/CenterContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="EscPanel/CenterContainer/VBoxContainer2/EscMenu"]
layout_mode = 2
text = "paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="EscPanel/CenterContainer/VBoxContainer2/EscMenu"]
layout_mode = 2
text = "Resume"

[node name="MenuButton" type="Button" parent="EscPanel/CenterContainer/VBoxContainer2/EscMenu"]
layout_mode = 2
text = "Main Menu"

[node name="SettingsButton" type="Button" parent="EscPanel/CenterContainer/VBoxContainer2/EscMenu"]
layout_mode = 2
text = "Settings"

[connection signal="pressed" from="EscButton" to="." method="_on_esc_button_pressed"]
[connection signal="pressed" from="EscPanel/CenterContainer/VBoxContainer2/EscMenu/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="EscPanel/CenterContainer/VBoxContainer2/EscMenu/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="EscPanel/CenterContainer/VBoxContainer2/EscMenu/SettingsButton" to="." method="_on_settings_button_pressed"]
